--- a/makewiki/templates/list.html
+++ b/makewiki/templates/list.html
@@ -11,29 +11,19 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-        aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <!-- CHALLENGE: Replace # with the url template tag. -->
-            <a class="nav-link" href="wiki-list-page">📓 Pages <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
     <main role="main" class="container">
         {% block content %}
-          <h1>Hello, World!</h1>
-        {% endblock %}>
+            <h1>Wiki List</h1>
+            {% if wiki_list %}
+            <ul>
+            {% for wiki in wiki_list %}
+                <li><a href="{{ wiki.slug }}">{{ wiki.title}}</a></li>
+            {% endfor %}
+            </ul>
+            {% else %}
+                <p>No Wikis are available.</p>
+            {% endif %}
+        {% endblock %}
     </main>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
